# net-crate

./: .gitignore  Cargo.toml  README.md
clients/game/: README.md
clients/game/backend/: Cargo.toml
clients/game/backend/bindings/: ClientMessage.ts  JoinParams.ts  PlayerState.ts  ServerMessage.ts
clients/game/backend/src/: main.rs  message.rs
clients/game/frontend/: index.html  package-lock.json  package.json  tsconfig.json
clients/game/frontend/src/: main.ts  network.ts  scene.ts
clients/game/frontend/src/draw/: mesh.ts  player.ts  scene.ts
clients/game/frontend/src/entity/: player.ts
clients/game/frontend/src/helpers/: light.ts  texture.ts  view.ts
clients/js/: README.md  page.html
clients/python/: README.md  connect_many.sh  requirements.txt  ws_rtc.py
src/: event.rs  lib.rs  main.rs  queue.rs
src/server/: connection.rs  mod.rs
src/server/webrtc/: api.rs  handlers.rs  mod.rs  signal.rs
